<resources>
	<string name="app_name">ElKenany</string>
	<!-- Strings used for fragments for navigation -->
	
	<string name="facebook_app_id">1504415433364556</string>
	<string name="fb_login_protocol_scheme">fb1504415433364556</string>
	<string name="facebook_client_token">cc276f411e34741ad80d2fe6ebaf9433</string>
	
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="sign_in_title">تسجيل الدخول</string>
	<string name="skip_title">تخطي</string>
	<string name="email_phone_title">الايميل أو رقم الهاتف</string>
	<string name="password_title">كلمة المرور</string>
	<string name="did_you_forgot_password_title">هل نسيت كلمة المرور؟</string>
	<string name="sign_in_with_title">أو سجل عبر</string>
	<string name="dont_have_account_title">ليس لديك حساب؟ سجل الأن</string>
	<string name="create_account_title">انشاء حساب جديد</string>
	<string name="name_title">الأسم</string>
	<string name="email_title">الأيميل</string>
	<string name="phone_title">رقم الهاتف</string>
	<string name="have_account_title">لديك حساب؟ سجل دخول</string>
	<string name="homeBtn">الرئيسية</string>
	<string name="homeSearch">البحث</string>
	<string name="homeNotification">الإشعارات</string>
	<string name="homeProfile">الملف الشخصي</string>
	<string name="homeMore">المزيد</string>
	<string name="sectors_title">القطاعات</string>
	<string name="services_title">الخدمات</string>
	<string name="recommendation_title">مقترح لك</string>
	<string name="partner_title">شركاء النجاح</string>
	<string name="stock_title">البورصات</string>
	<string name="guide_title">دليل الكناني</string>
	<string name="news_title">الأخبار</string>
	<string name="store_title">سوق الكناني</string>
	<string name="shows_title">المعارض</string>
	<string name="guide_and_magazine_title">الدلائل والمجلات</string>
	<string name="stockBtn">البورصة</string>
	<string name="logout_title">تسجيل الخروج</string>
	<string name="my_ads_title">اعلاناتي</string>
	<string name="daily_stock_title">البورصة اليومية</string>
	<string name="failed_to_receive_data_msg">تعذر الحصول علي اي معلومات بسبب ضعف شبكة الأنترنت</string>
	<string name="menu_title">القائمة</string>
	<string name="messages_title">الرسائل</string>
	<string name="about_title">عن الكناني</string>
	<string name="share_title">شارك التطبيق</string>
	<string name="rating_title">قيم التطبيق</string>
	<string name="short_cuts_title">قائمة الأختصارات</string>
	<string name="read_more_title">أقرا ايضا :</string>
	<string name="no_more_news_title">لا توجد اخبار اخري</string>
	<string name="know_more_title">أعرف أكثر</string>
	<string name="login_required_notification_message">برجاء تسجيل الدخول حتي تتمكن من استقبال الأشعارات</string>
	<string name="ad_details_title">تفاصيل الأعلان</string>
	<string name="ad_describe_title">وصف الأعلان</string>
	<string name="contact_information_title">معلومات التواصل :</string>
	<string name="talk_to_seller_title">كلم البائع</string>
	<string name="statistics_title">الإحصائيات</string>
	<string name="today_title">تاريخ اليوم</string>
	<string name="latest_news_title">الأكثر تداولا</string>
	<string name="urgent_title">الأحدث</string>
	<string name="select_date_title">حدد التاريخ</string>
	<string name="from_title">من</string>
	<string name="to_title">الي</string>
	<string name="unknown_title">-</string>
	<string name="change_title">مقدار التغير</string>
	<string name="changes_number_title">عدد التغيرات</string>
	<string name="contact_us_title">إتصل بنا</string>
	<string name="chats_error_message">برجاء تسجيل الدخول حتي تتمكن من عرض الرسائل</string>
	<string name="change_password_title">تغيير كلمة المرور</string>
	<string name="password_recovery_guide_message">برجاء ادخال الإيميل الخاص بك حتي نتمكن من أرسال رمز التأكيد اليكم</string>
	<string name="confirm_title">تأكيد</string>
	<string name="about_company_data">"في 2018 قامت مجموعة الكناني بإطلاق أول وأكبر تطبيق وموقع\n"
"خدمي في المجال البيطري والزراعي لخدمة جميع العاملين في\n"
"القطاع ( الداجني والحيواني والزراعي والسمكي والخيول العربية الأصيلة )\n"
"في مصر والوطن العربي"
</string>
	<!--    <string name="about_company_data">  "نحن نشرف بمرور خمسة عشرة عاماً على تأسيس مجموعة الكناني ، فمنذ أن تأسست الشركة في عام 2008 في مدينة المنصورة بمحافظة الدقهلية ، ونحن نسعى إلي توفير احتياجات العملاء وأفضل الخدمات للوصول إلى إرضائهم  لنتمكن من تكوين أكبر قاعدة داخل وخارج السوق المصرى في مجالات متنوعة تخدم المجال البيطري والزراعي ( القطاع الداجني - الحيواني - الزراعى - السمكي - الخيول العربية ).\n"-->
	<!--                                "\n"-->
	<!--                                " مجموعة الكناني دائماً تعمل على التميز والنجاح من خلال أعضاء فريق عمل مؤهل ومدرب على أحدث التقنيات لخدمة السادة العملاء والموردين والمساهمين والمجتمع الذي تخدمه.\n"-->
	<!--                                "\n"-->
	<!--                                "ولأننا نبحث عن تطوير الشركة والإرتقاء بها فنحن نتلقى ونرحب بإقتراحاتكم ولا نطرحها جانبا بل نجاهد إلى تلبيتها ، لأن هدفنا جميعاَ الوصول إلى الرفع من الشأن الإقتصادي المصري بشكل خاص والعربي بشكل عام \n"-->
	<!--                                "\n"-->
	<!--                                "\n"-->
	<!--                                "بعد البحث لفترات طويلة عن قاعدة بيانات حقيقية  وواضحة لكل من يعمل في المجال بالسوق المحلى ( البيطري - الزراعي ) وبالتزامن مع بدء إنتشار عمليات الإستغلال من قبل الوسطاء نبتت فكرة أول وأكبر تطبيق خدمي في المجال البيطري والزراعي لجميع أنواع الهواتف المحمولة في عام 2018 .\n"-->
	<!--                                "\n"-->
	<!--                                "ولحرص مجموعة الكناني الدائم على مصلحة جميع العاملين بالمجال ونقل التطور التكنولوجى إلى المجال البيطري والزراعي بجميع قطاعاته بشكل متكامل ، قامت الشركه بإطلاق وتطويرالموقع الإلكتروني والتطبيق ليكون شامل لخدمة جميع العاملين في القطاعات ( الإنتاج الداجنى  - والحيواني  - والزراعي - والسمكي - والخيول العربية الأصيلة ) فى مصر بشكل خاص والوطن العربى بشكل عام .\n"-->
	<!--                                "\n"-->
	<!--                                "وبذلك فقد تمكنا من فعل أول سبق وثورة تكنولوجية في جميع قطاعات المجال البيطري والزراعي ، بدمج التكنولوجيا والبيانات لتسهيل الوصول على العاملين بالقطاعات .\n"-->
	<!--                                "\n"-->
	<!--                                "المهمة : \n"-->
	<!--                                "نسعى دائماً لتطوير خدمات الشركة والارتقاء بمستوى الأداء المؤسسي لتلبية احتياجات العملاء الحاليين والوصول إلى كل العملاء المتوقعين باستخدام أحدث الأساليب التكنولوجية لتوفير قاعدة بيانات شاملة ومتكاملة لكل مايخص المجال البيطري والزراعي .\n"-->
	<!--                                "\n"-->
	<!--                                "الرؤية :\n"-->
	<!--                                "تتطلع مجموعة الكناني أن تصبح الاختيار الأول لأى عامل ومستثمر في جميع قطاعات المجال البيطري والزراعي من خلال تقديم خدمات إستثنائية قبل وبعد البيع لعملائنا وتوفير حلول إقتصادية مبتكرة ."</string>-->
	<!--    -->
	<string name="enter_verification_code_message">برجاء ادخال الكود المرسل اليك علي البريد الالكتروني</string>
	<string name="enter_code_title">ادخل الكود</string>
	<string name="change_passcode_title">تغيير كلمة المرور</string>
	<string name="resend_verification_code_title">لم يصلك رمز التأكد؟ ارسل مرة اخري</string>
	<string name="add_ad_title">إضافة إعلان</string>
	<string name="select_photo_title">اختر صورة</string>
	<string name="title_ad_title">أسم الاعلان</string>
	<string name="ad_address_title">العنوان</string>
	<string name="fill_data_completely_title">ادخل البيانات الأتية كاملة</string>
	<string name="price_title">السعر</string>
	<string name="create_ad_title">إنشاء إعلان</string>
	<string name="done_upload_image_title">تم إضافة صورة</string>
	<string name="delete_ad_title">حذف الإعلان</string>
	<string name="coming_soon_title">سوف يتم توفير هذة الخدمة قريبا</string>
	<string name="alphapetical_title">أبجدي</string>
	<string name="gallery_title">الصور</string>
	<string name="select_company_title">أختر الشركة</string>
	<string name="select_product_title">أختر الصنف</string>
	<string name="edit_ad_title">تعديل الإعلان</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="intrested_title">مهتم</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="guide_data_title">بيانات الدليل</string>
	<string name="about_company_title">عن الشركة</string>
	<string name="show_details_title">تفاصيل المعرض</string>
	<string name="about_show_title">عن المعرض</string>
	<string name="reviewes_title">المراجعات</string>
	<string name="going_state_zero_title">حالة الحضور</string>
	<string name="show_rating_title">تقييم المعرض</string>
	<string name="arrival_date_title">تاريخ الوصول</string>
	<string name="dir_date_title">تاريخ التوجيه</string>
	<string name="weight_ton_title">الحمولة طن</string>
	<string name="type_title">النوع</string>
	<string name="made_in_title">المنشأ</string>
	<string name="arrical_date_title">تاريخ الوصول</string>
	<string name="exporting_agency_title">الجهة المستوردة</string>
	<string name="agency_title">الوكيل الملاحي</string>
	<string name="empty_port_title">ميناء التفريغ</string>
	<string name="ships_movment_title">حركة السفن</string>
	<string name="select_country_title">اختر البلد</string>
	<string name="explore_jobs_title">تصفح الوظائف</string>
	<string name="job_title_title">نوع الوظيفة</string>
	<string name="company_title">الشركة</string>
	<string name="expected_salary_title">الراتب المتوقع</string>
	<string name="experience_title">الخبرة</string>
	<string name="job_title">الوظيفة</string>
	<string name="job_description_title">الوصف الوظيفي</string>
	<string name="apply_now_title">قدم الأن</string>
	<string name="most_common_title">الأكثر تداولا</string>
	<string name="latest_title">الأحدث</string>
</resources>