<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	>
	<item
		android:id="@+id/homeServiceFragment"
		android:icon="@drawable/home_icon_selector"
		android:title="@string/homeBtn"
		/>
	<item
		android:id="@+id/searchFragment"
		android:icon="@drawable/search_icon_selector"
		android:title="@string/homeSearch"
		tools:targetApi="o"
		/>
	<item
		android:id="@+id/notificationFragment"
		android:icon="@drawable/notification_icon_selector"
		android:title="@string/homeNotification"
		/>
	
	<item
		android:id="@+id/profileFragment"
		android:icon="@drawable/profile_icon_selector"
		android:title="@string/homeProfile"
		/>
	<item
		android:id="@+id/mainMenuFragment"
		android:icon="@drawable/menu_icon_selector"
		android:title="@string/homeMore"
		/>
</menu>