<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            tools:context=".views.auth.LoginFragment">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/skip_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:background="@drawable/primary_btn_shape"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/skip_title"
                android:textColor="@color/green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/sign_in_title"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/app_image"
                android:layout_width="239dp"
                android:layout_height="171dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/login_logo"
                tools:ignore="ContentDescription" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="47dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="7dp">

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/primary_edit_text_shape"
                    android:fontFamily="@font/cairo_bold"
                    android:hint="@string/email_phone_title"
                    android:padding="10dp"
                    android:textAlignment="textEnd"
                    android:textDirection="ltr"
                    android:textSize="14sp"
                    tools:ignore="Autofill,TextFields" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="7dp">

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/primary_edit_text_shape"
                    android:drawableStart="@drawable/ic_baseline_remove_red_eye_24"
                    android:fontFamily="@font/cairo_bold"
                    android:hint="@string/password_title"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    tools:ignore="Autofill,TextFields" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/forgot_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/did_you_forgot_password_title"

                android:textColor="@color/green" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_in_btn"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/primary_btn_shape"
                android:fontFamily="@font/cairo_black"
                android:text="@string/sign_in_title"
                android:textColor="@color/green" />

            <ProgressBar
                android:id="@+id/loading_progressbar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cairo_black"
                android:text="@string/sign_in_with_title"
                android:textColor="@color/orange"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/google_signin_btn"
                    android:layout_width="75dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/google_btn_shape"
                    android:foreground="@drawable/g_logo"
                    android:foregroundGravity="center" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/facebook_signin_btn"
                    android:layout_width="75dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/facebook_btn_shape"
                    android:foreground="@drawable/f_logo"
                    android:foregroundGravity="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/create_account_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/dont_have_account_title"
                android:textColor="@color/green"
                android:textSize="12sp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </ScrollView>
</layout>