<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".views.news.NewsFragment">

        <TextView
            android:id="@+id/app_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/homeNotification"
            android:textColor="@color/green"
            android:gravity="center_horizontal"
            android:textSize="20sp" />

        <!--        <ProgressBar-->
        <!--            android:id="@+id/loading_progressbar"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_centerInParent="true"-->
        <!--            android:visibility="gone" />-->
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/loading_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_bar_title">
            <include
                layout="@layout/notification_shimmer_loading" />
        </com.facebook.shimmer.ShimmerFrameLayout>


        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/failed_to_receive_data_msg"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/login_required_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:text="@string/login_required_notification_message"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_btn"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_required_message"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/primary_btn_shape"
            android:fontFamily="@font/cairo_black"
            android:text="@string/sign_in_title"
            android:textColor="@color/green"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notification_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_bar_title"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layoutDirection="rtl"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/notification_card_view_item" />

    </RelativeLayout>
</layout>